--- a/snake/index.html
+++ b/snake/index.html
@@ -1,52 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake</title>
-    <style>
-        /* Estilos básicos para el contenedor del juego */
-        #game-container {
-            width: 400px;
-            height: 400px;
-            background-color: black;
-            position: relative;
-            overflow: hidden;
-        }
-        .snake-part {
-            width: 20px;
-            height: 20px;
-            background-color: green;
-            position: absolute;
-        }
-        #food {
-            width: 20px;
-            height: 20px;
-            background-color: red;
-            position: absolute;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Snake</title>
+  <link rel="icon" type="image/x-icon" href="snake_ico.jpg">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
-    <div id="game-container">
-        <!-- Aquí irá el juego -->
-    </div>
-
-    <script>
-        // Aquí empezarás a escribir el código de tu juego
-
-        // Pista: Define las constantes y variables iniciales, como la velocidad de la serpiente, el tamaño del tablero y la posición inicial de la serpiente.
-
-        // Pista: Crea una función para dibujar la serpiente y la comida en el tablero.
-
-        // Pista: Implementa la lógica para mover la serpiente y controlar su dirección.
-
-        // Pista: Desarrolla la lógica para detectar colisiones con la comida y actualizar la longitud de la serpiente.
-
-        // Pista: Agrega lógica para detectar colisiones con los bordes del tablero y con el cuerpo de la serpiente.
-
-        // Pista: Añade la capacidad de reiniciar el juego y mantener el puntaje si lo deseas.
-    </script>
+  <header>
+    <img src="sanke_t.png">
+  </header>
+  <section>
+   <div>
+      <label for="veloz" style="background-color: white"><strong>Dificultad:</strong></label>
+      <select id="veloz">
+        <option disabled selected value="0">Elige una opción</option>
+        <option value="200">Facil</option>
+        <option value="150">Media</option>
+        <option value="100">Difícil</option>
+        <option value="50">Muy Difícil</option>
+      </select>
+   </div>
+       <canvas id="juegoSerpiente" width="400" height="400"></canvas>
+       <button id="botonStart"><strong>Empezar Juego</strong></button>
+       <script src="snake.js"></script>
+  </section>
 </body>
 </html>
