--- a/snake/index.html
+++ b/snake/index.html
@@ -11,9 +11,10 @@
   <header>
     <img src="sanke_t.png">
   </header>
+  <p id="output"></p>
   <section>
    <div>
-      <label for="veloz" style="background-color: white"><strong>Dificultad:</strong></label>
+      <label for="select" style="background-color: white"><strong>Dificultad:</strong></label>
       <select id="veloz">
         <option disabled selected value="0">Elige una opción</option>
         <option value="200">Facil</option>
