--- a/snake/index.html
+++ b/snake/index.html
@@ -16,9 +16,9 @@
    <div>
       <label for="select" style="background-color: white"><strong>Dificultad:</strong></label>
       <select id="veloz">
-        <option disabled selected value="0">Elige una opción</option>
+        <option disabled selected value="0">Elige Nivel</option>
         <option value="200">Facil</option>
-        <option value="150">Media</option>
+        <option value="150">Medio</option>
         <option value="100">Difícil</option>
         <option value="50">Muy Difícil</option>
       </select>
