Sube nivel cada 10 manzanas

--- a/snake/index.html
+++ b/snake/index.html
@@ -11,8 +11,7 @@
   <header>
     <img src="sanke_t.png">
   </header>
-  <p id="output"></p>
-  <section>
+    <section>
    <div>
       <label for="select" style="background-color: white"><strong>Dificultad:</strong></label>
       <select id="veloz">
@@ -20,12 +19,12 @@
         <option value="200">Facil</option>
         <option value="150">Medio</option>
         <option value="100">Difícil</option>
-        <option value="50">Muy Difícil</option>
       </select>
    </div>
        <canvas id="juegoSerpiente" width="400" height="400"></canvas>
        <button id="botonStart"><strong>Empezar Juego</strong></button>
        <script src="snake.js"></script>
   </section>
+  <footer><p id="output"></p></footer>
 </body>
 </html>
