--- a/snake/index.html
+++ b/snake/index.html
@@ -13,7 +13,7 @@
   </header>
     <section>
    <div>
-      <label for="select" style="background-color: white"><strong>Dificultad:</strong></label>
+      <label for="select" style="background-color: white"><strong>Dificultad Inicio:</strong></label>
       <select id="veloz">
         <option disabled selected value="0">Elige Nivel</option>
         <option value="200">Facil</option>
